--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "ng serve -o",
     "build": "ng build",
     "build:href": "ng build --base-href ./",
-    "build:github": "npm run delete:docs && npm run build:href && npm run copy:dist",
+    "build:githubFirebase": "npm run delete:docs && npm run build:href && npm run copy:dist && npm run copy:distFirebase",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "delete:docs": "del docs",
-    "copy:dist": "copyfiles dist/app-utn/* ./docs -f"
+    "copy:dist": "copyfiles dist/app-utn/* ./docs -f",
+    "copy:distFirebase": "copyfiles dist/app-utn/* ./y -f"
+
   },
   "private": true,
   "dependencies": {
